めんどいのでdebug_startでカスタムの制限時間を設定できる機能を廃止

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ commands:
     description: Start the game forcibly for debug or test play.
     permission: manhuntearthmain.debug
     permission-message: You don't have a permission to use this command!
-    usage: /debug_start <second:int> <allPlayersIntoHunterTeam:boolean>
+    usage: /debug_start <allPlayersIntoHunterTeam:boolean>
   debug_stop:
     description: Stop the game forcibly for debug or test play.
     permission: manhuntearthmain.debug
