開始前、終了後にQuitButtonを与えかんたんに退出できるようにする、lobbyコマンドで退出できるようにする、およびそれらのための細かい調整 #1

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,6 +20,8 @@ commands:
     description: Show GameState for debug or test play.
     permission: manhuntearthmain.debug
     permission-message: You don't have a permission to use this command!
+  lobby:
+    description: ゲームを退出します。
 
 permissions:
   manhuntearthmain.debug:
