--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>si.f5.manhuntearth</groupId>
   <artifactId>ManhuntEarthMain</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>ManhuntEarthMain</name>
