--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>si.f5.manhuntearth</groupId>
   <artifactId>ManhuntEarthMain</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   <packaging>jar</packaging>
 
   <name>ManhuntEarthMain</name>
@@ -25,6 +25,10 @@
         <configuration>
           <source>11</source>
             <target>11</target>
+            <compilerArgs>
+                <arg>--add-modules</arg>
+                <arg>java.se,java.desktop</arg>
+            </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
